<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ConstructionIdentification</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>
    <string name="enter_distance">Enter Notes</string>
    <string name="distance_dialog_title">Observation Notes</string>
    <string name="distance_default_text">Test Data</string>
    <string name="enable_calls">Enable Driving Calls</string>
    <string name="disable_calls">Disable Driving Calls</string>
    <string name="test">Test</string>
    <string name="rssi_label">RSSI Threshhold (-20 to -128)</string>

</resources>